--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,5 +1,8 @@
 {
-    "presets": [
-        "@babel/preset-env"
-    ]
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+  ],
+  "plugins": ["@babel/transform-class-properties"]
+
 }
