Setup front end dependencies Install react, react-dom, react-router Update Elixir in mix.exs to 1.7 Co-authored-by tjhiry29 <r.tjhie0809@gmail.com>

--- a/assets/package.json
+++ b/assets/package.json
@@ -6,12 +6,22 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
+    "redux-form": "^7.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
     "css-loader": "^0.28.10",
