--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -3,6 +3,6 @@
     "@babel/preset-env",
     "@babel/preset-react"
   ],
-  "plugins": ["@babel/plugin-proposal-class-properties"]
+  "plugins": ["@babel/plugin-proposal-class-properties", "@babel/plugin-transform-arrow-functions", "@babel/plugin-proposal-object-rest-spread"]
 
 }
