--- a/assets/package.json
+++ b/assets/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^16.6.3",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
+    "react-widgets": "^4.4.7",
     "redux": "^4.0.1",
     "redux-form": "^7.4.2"
   },
@@ -26,10 +27,14 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "copy-webpack-plugin": "^4.5.0",
-    "css-loader": "^0.28.10",
+    "css-loader": "^0.28.11",
+    "file-loader": "^2.0.0",
+    "image-webpack-loader": "^4.5.0",
     "mini-css-extract-plugin": "^0.4.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
+    "style-loader": "^0.23.1",
     "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.1.2",
     "webpack": "4.4.0",
     "webpack-cli": "^2.0.10"
   }
